# AISearch

./: .gitignore  Cargo.toml  README.md
src/: azureai.rs  constants.rs  database.rs  embedding.rs  inferencing.rs  main.rs  routes.rs  text_splitter.rs  upload.rs  vars.rs
src/azure/: embeddings.rs  inferencing.rs  mod.rs
src/local/: database.rs  embedding.rs  inferencing.rs  mod.rs
src/tests/: azureai.rs  mod.rs  sql_query_test.rs  text_splitter_test.rs  tools.rs
src/tools/: mod.rs  tool_creator.rs
src/utils/: config.rs  constants.rs  mod.rs  text_splitter.rs  upload.rs  utils.rs  vars.rs
