[package]
name = "AISearch"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main", features = [
    "cuda",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main", features = [
    "cuda",
] }
candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main", features = [
    "cuda",
] }
tokenizers = "0.19"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
serde_json = "1.0.108"
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
reqwest = "0.12.0"
regex = "1.10.2"
rand = "0.8.5"
hf-hub = { version = "0.3.2", features = ["tokio"] }
pgvector = { version = "0.3", features = ["postgres", "sqlx", "serde"] }
anyhow = "1.0.82"
async-openai = "0.23.3"
futures = "0.3.30"
warp = "0.3.7"
async_once = "0.2.6"
chrono = "0.4.38"
sqlx = { version = "0.7.4", features = ["chrono", "runtime-tokio"] }
uuid = { version = "1.9.1", features = ["v4"] }
pdf-extract = "0.7.7"
tracing-subscriber = "0.3.18"
langchain-rust = "4.3.0"
tracing = "0.1.40"
toml = "0.8.19"
