[package]
name = "AISearch"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main", features = [
    "cuda",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main", features = [
    "cuda",
] }
candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main", features = [
    "cuda",
] }
tokenizers = "0.21"
tokio = { version = "1.43", features = ["full", "macros", "rt-multi-thread"] }
serde_json = "1.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.12"
regex = "1.11"
rand = "0.8.5"
hf-hub = { version = "0.4", features = ["tokio"] }
sqlx = { version = "0.8", features = ["postgres", "chrono", "runtime-tokio"] }
pgvector = { version = "0.4", features = ["postgres", "sqlx", "serde"] }
anyhow = "1.0"
async-openai = "0.23"
futures = "0.3"
warp = "0.3.7"
async_once = "0.2"
chrono = "0.4"
uuid = { version = "1.12", features = ["v4"] }
pdf-extract = "0.8"
tracing-subscriber = "0.3"
langchain-rust = "4.6"
tracing = "0.1"
toml = "0.8"
